@@ -1,0 +1,5 @@
+{
+    "require": {
+        "symfony/http-foundation": "^3.4"
+    }
+}
