@@ -20,65 +20,7 @@ Inclut au départ les fichiers config.php, doctype.php et header.php
 Inclut à la fin le fichier footer.php
 */
 
-session_start();
-
-// Version
-$version="2.8.03";
-
-// Redirection vers setup si le fichier config est absent
-if(!file_exists("include/config.php")){
-  include "include/noConfig.php";
-}
-
-require_once "include/config.php";
-require_once "include/sanitize.php";
-require_once __DIR__."/lang/fr_FR.php";
-if( file_exists( __DIR__."/lang/custom.php" )){
-  require_once __DIR__."/lang/custom.php";
-}
-
-// Initialisation des variables
-$date=filter_input(INPUT_GET,"date",FILTER_SANITIZE_STRING);
-$date=filter_var($date,FILTER_CALLBACK,array("options"=>"sanitize_dateSQL"));
-$menu_get=filter_input(INPUT_GET,"menu",FILTER_SANITIZE_STRING);
-$menu_post=filter_input(INPUT_POST,"menu",FILTER_SANITIZE_STRING);
-$menu=($menu_get=="off" or $menu_post=="off")?false:true;
-
-$page_get=filter_input(INPUT_GET,"page",FILTER_CALLBACK,array("options"=>"sanitize_page"));
-$page_post=filter_input(INPUT_POST,"page",FILTER_CALLBACK,array("options"=>"sanitize_page"));
-
-if($page_post){
-  $page=$page_post;
-}elseif($page_get){
-  $page=$page_get;
-}else{
-  $page="planning/poste/index.php";
-}
-
-// Login Anonyme
-$login=filter_input(INPUT_GET,"login",FILTER_SANITIZE_STRING);
-if($login and $login==="anonyme" and $config['Auth-Anonyme'] and !array_key_exists("login_id",$_SESSION)){
-  $_SESSION['login_id']=999999999;
-  $_SESSION['login_nom']="Anonyme";
-  $_SESSION['login_prenom']="";
-  $_SESSION['oups']["Auth-Mode"]="Anonyme";
-}
-
-// Sécurité CSRFToken
-$CSRFSession = isset($_SESSION['oups']['CSRFToken']) ? $_SESSION['oups']['CSRFToken'] : null;
-$_SESSION['PLdate']=array_key_exists("PLdate",$_SESSION)?$_SESSION['PLdate']:date("Y-m-d");
-
-if(!array_key_exists("oups",$_SESSION)){
-  $_SESSION['oups']=array("week"=>false);
-}
-  
-// Affichage de tous les plannings de la semaine
-if($page=="planning/poste/index.php" and !$date and $_SESSION['oups']['week']){
-  $page="planning/poste/semaine.php";
-}
-
-
-date_default_timezone_set("Europe/Paris");
+include_once('init.php');
 
 // Vérification de la version de la base de données
 // Si la version est différente, mise à jour de la base de données 
