@@ -1,3 +1,7 @@
+*** Unreleased ***
+- Add Symfony/HttpFoundation component
+- Code refactoring: move initialization in ini.php
+
 *** Version 2.8.03         (12 septembre 2018)   ***
 - Correction
 Correction du problème empêchant l'affichage des absences sans droits d'administration
